# HelloWorld_CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  my_lib.cc
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
doc/: Doxyfile
src/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
